# Code

./: .gitignore  phase_3.ipynb
C++/VSCode/: main.cpp
HTML_CSS/Framework/tailwindcss/: package-lock.json  package.json
HTML_CSS/Projects/1.YouTube/: style.css  website.html
HTML_CSS/Projects/Practice/: index.html  style.css
HTML_CSS/VSCode/CSS_Bootstrap_tutorial/: index.html
HTML_CSS/tailwindcss/Notion_Login_Page/: index.html  output.css  package-lock.json
Java/.metadata/: version.ini
Java/DSA Bootcamp/: readme.txt
Java/DSA Bootcamp/Vid-8/: readme.txt
Java/DSA/.metadata/: version.ini
Java/Eclipse/.metadata/: .lock_info  version.ini
Java/Eclipse_Practice/: .project
Java/Eclipse_Practice/src/: Main.java
JavaScript/JRE/NodeJS/: expressapp.js  fsmodule.js  httpserver.js  index.html  index.js  modulefirst.js  moudlesecond.mjs  nodevent.js  osmodule.js  package-lock.json  package.json  pathmodule.js  second.js  urlmodule.js  website.js
JavaScript/Learning/BroCode_JS_Tutorial_Walkthrough/: index.html  mathUtil.js  person.json
JavaScript/learning_to_code/: index.js  names.json  style.css
Projects/Vue3 Crash Course/: package-lock.json
Python/: tables.py
Python/Tooling/LangChain/Tutorial/: README.md  pyproject.toml  requirements.txt
Python/Tooling/LangChain/Tutorial/agents/: agents.ipynb
Python/Tooling/LangChain/Tutorial/api/: app.py  client.py
Python/Tooling/LangChain/Tutorial/chatbot/: app.py  pyproject.toml
Python/Tooling/LangChain/Tutorial/rag/: simplerag.ipynb
Python/WebScraping/: requirements.txt
Python/Zed/: main.py
(+1465 files in other folders)
